--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      保険簿です
     </noscript>
     <div id="root"></div>
     <!--
