--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>保険簿</title>
+    <meta name="viewport" content="width=device-width">
   </head>
   <body>
     <noscript>
